--- a/src/assets/i18n/global/en-global.json
+++ b/src/assets/i18n/global/en-global.json
@@ -200,7 +200,7 @@
   "DOWNLOAD_NOT_UPLOADED": "Document Not Uploaded",
   "COULD_NOT_UPLOAD": "Could not upload",
   "UPLOAD_AGAIN": "Please upload again.",
-  "CV_PLATFORM": "Certificate Generation Platform.",
+  "CV_PLATFORM": "Edo State Educational Certificate Generation and Verification Platform.",
   "CREACT_AN_ACCOUNT": "Create An Account",
   "PLEASE_ENTER_FOLLOWING_DETAILS": "Please enter the following details to create an account",
   "SIGNIN": " Sign in",
